# WEB_Module_08

./: pyproject.toml
MongoDB/: load_json.py  main.py  pyproject.toml
MongoDB/src/: models.py  quotes.json
RabbitMQ/: config.ini  consumer.py  producer.py  seeds.py
RabbitMQ/src/: models.py
